# multicall.py

./: .gitignore  Makefile  license  pyproject.toml  readme.md  setup.py
.github/workflows/: black.yaml  compile.yaml  lint.yaml  pytest.yaml  release.yaml  test-install.yaml
examples/: daistats.py  mcd_exporter copy.py  mcd_exporter.py
multicall/: __init__.py  asyncio.py  call.py  constants.py  exceptions.py  loggers.py  multicall.py  signature.py  utils.py
scripts/: generate_chainds.py
tests/: conftest.py  fixtures.py  test_and_validate_multicall_contracts_methods.py  test_async.py  test_async_speed.py  test_call.py  test_compiled.py  test_for_all_chains.py  test_multicall.py  test_multicall_for_all_chains.py  test_signature.py  test_utils.py
tests/integration/: test_for_all_chains.py
